backend: create new user
