# packages/backend/src/auth/auth.controller.ts
@@ -1,0 +1,13 @@
+import { Controller, Post, Body } from '@nestjs/common'
+import { AuthService } from './auth.service'
+import { CreateUserDto } from 'src/auth/dto/create-user.dto'
+
+@Controller('auth')
+export class AuthController {
+  constructor(private readonly authService: AuthService) {}
+
+  @Post('register')
+  create(@Body() createUserDto: CreateUserDto) {
+    return this.authService.create(createUserDto)
+  }
+}
